[package]
name = "yampa"
version = "0.2.1"
authors = ["Alberto Leal <mailforalberto@gmail.com>"]

[dependencies]
serde = "0.8"
serde_json = "0.8"
serde_macros = "0.8"
argon2rs = "0.2.5"
ring = "0.4.3"
ring-pwhash = "0.1.1"
secstr = "0.2.1"
byteorder = "0"
termion = "1.1.1"
clap = "2.13.0"
lazy_static = "0.2.1"
version = "2"
colored = "1.3.1"

[dev-dependencies]
rusterpassword = "0.2.0"
